--- a/facebook_auth_desktop/pubspec.yaml
+++ b/facebook_auth_desktop/pubspec.yaml
@@ -12,10 +12,10 @@ dependencies:
     sdk: flutter
   http: ^1.0.0
   flutter_secure_storage: ^9.0.0
-  flutter_facebook_auth_platform_interface: ^6.0.0-dev.2
+  #  flutter_facebook_auth_platform_interface: ^6.0.0-dev.2
 
-  # flutter_facebook_auth_platform_interface:
-  #   path: ../facebook_auth_platform_interface
+  flutter_facebook_auth_platform_interface:
+    path: ../facebook_auth_platform_interface
 
 
 dev_dependencies:
