--- a/facebook_auth_web/pubspec.yaml
+++ b/facebook_auth_web/pubspec.yaml
@@ -14,10 +14,10 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   js: ^0.6.3
-  flutter_facebook_auth_platform_interface: ^6.0.0-dev.2
+#  flutter_facebook_auth_platform_interface: ^6.0.0-dev.2
   
-  # flutter_facebook_auth_platform_interface:
-    # path: ../facebook_auth_platform_interface
+  flutter_facebook_auth_platform_interface:
+   path: ../facebook_auth_platform_interface
   
 dev_dependencies:
   flutter_test:
