--- a/facebook_auth_desktop/pubspec.yaml
+++ b/facebook_auth_desktop/pubspec.yaml
@@ -15,7 +15,10 @@ dependencies:
   #  flutter_facebook_auth_platform_interface: ^6.0.0-dev.2
 
   flutter_facebook_auth_platform_interface:
-    path: ../facebook_auth_platform_interface
+    git:
+      url: git@github.com:brancedev/flutter-facebook-auth.git
+      path: facebook_auth_platform_interface
+      ref: 2e1d0916eaca44295291cdf8d333621d768db9da
 
 
 dev_dependencies:
