--- a/facebook_auth/pubspec.yaml
+++ b/facebook_auth/pubspec.yaml
@@ -14,7 +14,10 @@ dependencies:
 
   #  flutter_facebook_auth_platform_interface: ^6.0.0-dev.4
   flutter_facebook_auth_platform_interface:
-    path: ../facebook_auth_platform_interface
+    git:
+      url: git@github.com:brancedev/flutter-facebook-auth.git
+      path: facebook_auth_platform_interface
+      ref: fastic
 
 
 dev_dependencies:
